Fix responsive header width on mobile

--- a/scss/media/_responsive.scss
+++ b/scss/media/_responsive.scss
@@ -10,6 +10,10 @@
     font-size: 14px;
   }
 
+.header__inner {
+  width: 80%;
+}
+
   #terminal {
     width: 80%;
     padding: 10px;
